--- a/Tests/QGL_Graphics.UnitTests/QGL_Graphics.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Graphics.UnitTests/QGL_Graphics.UnitTests.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="Tests\Content\text_format_tests.cpp">
       <Filter>Tests\Content</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\Content\texture_tests.cpp">
+      <Filter>Tests\Content</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -59,6 +62,9 @@
       <Filter>Assets</Filter>
     </Image>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="Assets\lion.DDS">
       <Filter>Assets</Filter>
     </Image>
   </ItemGroup>
